# helixscreen

./: CHANGELOG.md  CLAUDE.md  README.md
.claude-recall/: LESSONS.md
docker/: Dockerfile.pi  Dockerfile.pi32
include/: alsa_sound_backend.h  ams_backend.h  ams_backend_ad5x_ifs.h  ams_backend_cfs.h  ams_backend_happy_hare.h  ams_backend_medusahc.h  ams_backend_mock.h  ams_backend_qidi.h  ams_state.h  ams_types.h  async_lifetime_guard.h  audio_settings_manager.h  backlight_backend.h  config.h  favorite_macro_widget.h  filament_slot_override.h  filament_slot_override_store.h  gcode_parser.h  gcode_viewer_watchdog.h  input_settings_manager.h  macro_param_cache.h  moonraker_api.h  moonraker_api_mock.h  moonraker_client_mock.h  moonraker_performance_source.h  moonraker_types.h  performance_state.h  pre_print_option.h  prerendered_images.h  print_start_collector.h  print_start_profile.h  printer_detector.h  printer_discovery.h  printer_image_manager.h  printer_images.h  printer_print_state.h  printer_state.h  runtime_config.h  snapmaker_resume.h  sound_backend.h  (+26 more)
mk/: cross.mk  patches.mk  tools.mk
patches/: lvgl-drm-set-master.patch  lvgl_check_arg_backport.patch  (+5 more)
tools/xml-linter/: LICENSE  README.md  pyproject.toml
tools/xml-linter/schema/: extract_schema.py  schema.json
tools/xml-linter/src/helix_xml_linter/: __init__.py  cli.py  constants.py  crossref.py  diagnostics.py  linter.py  schema_loader.py  xml_parser.py
tools/xml-linter/tests/: conftest.py  test_cli.py  test_diagnostics.py  test_linter.py  test_project_registry.py  test_schema_loader.py  test_xml_parser.py  test_xref.py
tools/xml-linter/tests/fixtures/: bad_enum.xml  bad_refs.xml  malformed.xml  state_qualifiers.xml  style_props.xml  unknown_attr.xml  unknown_widget.xml  valid_basic.xml  valid_refs.xml
(+286 files in other folders)
